Finished base authentication and signup

--- a/OnlineMarket.Helpers/OnlineMarket.Helpers.csproj
+++ b/OnlineMarket.Helpers/OnlineMarket.Helpers.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OnlineMarket.Models\OnlineMarket.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="MimeMapping" Version="1.0.1.37" />
