--- a/OnlineMarket.API/appsettings.json
+++ b/OnlineMarket.API/appsettings.json
@@ -6,5 +6,18 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Site": "http://www.google.com",
+    "Secret": "IKissedAGirlAndILikedIt!",
+    "TokenLifetime": "100:00:00"
+  },
+  "SwaggerSettings": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "Description": "Through this API you can access Online Market API.",
+    "UIEndPoint": "v1/swagger.json"
+  },
+  "ConnectionStrings": {
+    "onlineConnect": "Data Source=Online.db"
+  }
 }
