--- a/OnlineMarket.API/OnlineMarket.API.csproj
+++ b/OnlineMarket.API/OnlineMarket.API.csproj
@@ -45,4 +45,8 @@
      <ProjectReference Include="..\OnlineMarket.Errors\OnlineMarket.Errors.csproj" />
    </ItemGroup>
 
+   <ItemGroup>
+    <Folder Include="wwwroot\imgs\" />
+  </ItemGroup>
+
 </Project>
