--- a/.gitignore
+++ b/.gitignore
@@ -438,9 +438,9 @@ $RECYCLE.BIN/
 .idea/
 *.sln.iml
 
-**/online-market.code-workspace
-
 ##
 ## Visual Studio Code
 ##
 .vscode/*
+Migrations/
+Online.db
