--- a/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
+++ b/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
@@ -9,4 +9,9 @@
     <ProjectReference Include="..\OnlineMarket.Helpers\OnlineMarket.Helpers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JsonNet.ContractResolvers" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
